# autotools_boost_template

./: Makefile.am  README  README.md  configure.ac
test/: Makefile.am  test.cc
